@@ -106,7 +106,7 @@ src/HashList/o/finalize.o: src/HashList/finalize.cc src/HashList/HashList.ih src
 src/HashList/o/destroyMembers.o: src/HashList/destroyMembers.cc src/HashList/HashList.ih src/Preprocessor/foreach.hh src/HashList/HashList.hh src/Hash/Hash.hh
 	$(CC) $(CCADDFLAGS)  -c -o "src/HashList/o/destroyMembers.o" "src/HashList/destroyMembers.cc" 
 
-src/MD5File/o/record.o: src/MD5File/record.cc src/MD5File/MD5File.ih src/MD5File/MD5File.hh
+src/MD5File/o/record.o: src/MD5File/record.cc src/MD5File/MD5File.ih src/Preprocessor/debug.hh src/MD5File/MD5File.hh
 	$(CC) $(CCADDFLAGS)  -c -o "src/MD5File/o/record.o" "src/MD5File/record.cc" 
 
 src/MetalinkFile/o/finalize.o: src/MetalinkFile/finalize.cc src/MetalinkFile/MetalinkFile.ih src/MetalinkFile/MetalinkFile.hh src/Preprocessor/foreach.hh src/Globals/Globals.hh src/MirrorList/MirrorList.hh src/Mirror/Mirror.hh
@@ -118,10 +118,10 @@ src/MetalinkFile/o/addPath.o: src/MetalinkFile/addPath.cc src/MetalinkFile/Metal
 src/MirrorList/o/MirrorList.o: src/MirrorList/MirrorList.cc src/MirrorList/MirrorList.ih src/Preprocessor/debug.hh src/String/String.hh src/MirrorList/MirrorList.hh src/Mirror/Mirror.hh
 	$(CC) $(CCADDFLAGS)  -c -o "src/MirrorList/o/MirrorList.o" "src/MirrorList/MirrorList.cc" 
 
-src/Mirror/o/asXMLWithFile.o: src/Mirror/asXMLWithFile.cc src/Mirror/Mirror.ih src/Globals/Globals.hh src/Mirror/Mirror.hh
+src/Mirror/o/asXMLWithFile.o: src/Mirror/asXMLWithFile.cc src/Mirror/Mirror.ih src/Preprocessor/debug.hh src/Globals/Globals.hh src/Mirror/Mirror.hh
 	$(CC) $(CCADDFLAGS)  -c  -o "src/Mirror/o/asXMLWithFile.o" "src/Mirror/asXMLWithFile.cc" 
 
-src/Mirror/o/Mirror.o: src/Mirror/Mirror.cc src/Mirror/Mirror.ih src/Globals/Globals.hh src/Mirror/Mirror.hh
+src/Mirror/o/Mirror.o: src/Mirror/Mirror.cc src/Mirror/Mirror.ih src/Preprocessor/debug.hh src/Globals/Globals.hh src/Mirror/Mirror.hh
 	$(CC) $(CCADDFLAGS)  -c  -o "src/Mirror/o/Mirror.o" "src/Mirror/Mirror.cc" 
 
 src/Metalink/o/from.o: src/Metalink/from.cc src/Metalink/Metalink.ih src/Metalink/Metalink.hh src/Preprocessor/foreach.hh src/MetalinkFile/MetalinkFile.hh src/Globals/Globals.hh src/MirrorList/MirrorList.hh src/Mirror/Mirror.hh
@@ -131,5 +131,5 @@ src/o/metalink.o: src/o/ src/metalink.cc src/Misc/Preprocessor/Foreach.hh src/St
 	$(CC) $(CCADDFLAGS)  -c  -o "src/o/metalink.o" "src/metalink.cc" 
 
 src/metalink: src/Globals/o/ src/Hash/GCrypt/o/ src/Hash/HashCRC32/o/ src/Hash/HashED2K/o/ src/Hash/HashGNUnet/SessionKey/o/ src/Hash/HashGNUnet/o/ src/HashList/o/ src/MD5File/o/ src/Metalink/o/ src/MetalinkFile/o/ src/Mirror/o/ src/MirrorList/o/ src/String/o/ src/o/  src/String/o/translated.o src/Globals/o/statics.o src/Globals/o/XMLSafe.o src/Globals/o/XMLQuotedSafe.o src/Hash/HashGNUnet/o/value.o src/Hash/HashGNUnet/o/update.o src/Hash/HashGNUnet/o/pushChk.o src/Hash/HashGNUnet/o/gnunettisch.o src/Hash/HashGNUnet/o/finalize.o src/Hash/HashGNUnet/o/encryptBlock.o src/Hash/HashGNUnet/o/blockKeyAndQuery.o src/Hash/HashGNUnet/o/blockKey.o src/Hash/HashGNUnet/o/HashGNUnet.o src/Hash/GCrypt/o/value.o src/Hash/GCrypt/o/update.o src/Hash/GCrypt/o/name.o src/Hash/GCrypt/o/from.o src/Hash/GCrypt/o/finalize.o src/Hash/HashGNUnet/SessionKey/o/statics.o src/Hash/HashGNUnet/SessionKey/o/fromHash.o src/Hash/HashCRC32/o/from.o src/Hash/HashED2K/o/value.o src/Hash/HashED2K/o/update.o src/Hash/HashED2K/o/finalize.o src/HashList/o/update.o src/HashList/o/finalize.o src/HashList/o/destroyMembers.o src/MD5File/o/record.o src/MetalinkFile/o/finalize.o src/MetalinkFile/o/addPath.o src/MirrorList/o/MirrorList.o src/Mirror/o/asXMLWithFile.o src/Mirror/o/Mirror.o src/Metalink/o/from.o src/o/metalink.o
-	$(CC) $(CCADDFLAGS)  "src/String/o/translated.o" "src/Globals/o/statics.o" "src/Globals/o/XMLSafe.o" "src/Globals/o/XMLQuotedSafe.o" "src/Hash/HashGNUnet/o/value.o" "src/Hash/HashGNUnet/o/update.o" "src/Hash/HashGNUnet/o/pushChk.o" "src/Hash/HashGNUnet/o/gnunettisch.o" "src/Hash/HashGNUnet/o/finalize.o" "src/Hash/HashGNUnet/o/encryptBlock.o" "src/Hash/HashGNUnet/o/blockKeyAndQuery.o" "src/Hash/HashGNUnet/o/blockKey.o" "src/Hash/HashGNUnet/o/HashGNUnet.o" "src/Hash/GCrypt/o/value.o" "src/Hash/GCrypt/o/update.o" "src/Hash/GCrypt/o/name.o" "src/Hash/GCrypt/o/from.o" "src/Hash/GCrypt/o/finalize.o" "src/Hash/HashGNUnet/SessionKey/o/statics.o" "src/Hash/HashGNUnet/SessionKey/o/fromHash.o" "src/Hash/HashCRC32/o/from.o" "src/Hash/HashED2K/o/value.o" "src/Hash/HashED2K/o/update.o" "src/Hash/HashED2K/o/finalize.o" "src/HashList/o/update.o" "src/HashList/o/finalize.o" "src/HashList/o/destroyMembers.o" "src/MD5File/o/record.o" "src/MetalinkFile/o/finalize.o" "src/MetalinkFile/o/addPath.o" "src/MirrorList/o/MirrorList.o" "src/Mirror/o/asXMLWithFile.o" "src/Mirror/o/Mirror.o" "src/Metalink/o/from.o" "src/o/metalink.o" -lgcrypt -lgpg-error -lboost_program_options -lboost_filesystem -o "src/metalink" 
+	$(CC) $(CCADDFLAGS)  "src/String/o/translated.o" "src/Globals/o/statics.o" "src/Globals/o/XMLSafe.o" "src/Globals/o/XMLQuotedSafe.o" "src/Hash/HashGNUnet/o/value.o" "src/Hash/HashGNUnet/o/update.o" "src/Hash/HashGNUnet/o/pushChk.o" "src/Hash/HashGNUnet/o/gnunettisch.o" "src/Hash/HashGNUnet/o/finalize.o" "src/Hash/HashGNUnet/o/encryptBlock.o" "src/Hash/HashGNUnet/o/blockKeyAndQuery.o" "src/Hash/HashGNUnet/o/blockKey.o" "src/Hash/HashGNUnet/o/HashGNUnet.o" "src/Hash/GCrypt/o/value.o" "src/Hash/GCrypt/o/update.o" "src/Hash/GCrypt/o/name.o" "src/Hash/GCrypt/o/from.o" "src/Hash/GCrypt/o/finalize.o" "src/Hash/HashGNUnet/SessionKey/o/statics.o" "src/Hash/HashGNUnet/SessionKey/o/fromHash.o" "src/Hash/HashCRC32/o/from.o" "src/Hash/HashED2K/o/value.o" "src/Hash/HashED2K/o/update.o" "src/Hash/HashED2K/o/finalize.o" "src/HashList/o/update.o" "src/HashList/o/finalize.o" "src/HashList/o/destroyMembers.o" "src/MD5File/o/record.o" "src/MetalinkFile/o/finalize.o" "src/MetalinkFile/o/addPath.o" "src/MirrorList/o/MirrorList.o" "src/Mirror/o/asXMLWithFile.o" "src/Mirror/o/Mirror.o" "src/Metalink/o/from.o" "src/o/metalink.o" -lgcrypt -lgpg-error -lboost_regex -lboost_filesystem -lboost_program_options -o "src/metalink" 
 
