@@ -23,5 +23,8 @@
 #include <sstream>
 #include "../Globals/Globals.hh"
 
+//#define DEBUGLEVEL 32
+#include "../Preprocessor/debug.hh"
+
 using namespace bneijt;
 using namespace std;
